RESOLVED FIXED310605
Can't analyze HEIC images on web app, force converts to JPEG
https://bugs.webkit.org/show_bug.cgi?id=310605
Summary Can't analyze HEIC images on web app, force converts to JPEG
joanne_pan2
Reported 2026-03-23 22:28:02 PDT
This is due to the change here: rdar://150401192 It is decided that the conversion should be gated behind a quirk.
Attachments
joanne_pan2
Comment 1 2026-03-23 22:28:22 PDT
joanne_pan2
Comment 2 2026-03-23 22:36:11 PDT
EWS
Comment 3 2026-03-24 15:53:06 PDT
Committed 309872@main (b5cac067b0db): <https://commits.webkit.org/309872@main> Reviewed commits have been landed. Closing PR #61222 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.