Can't analyze HEIC images on web app, force converts to JPEG https://bugs.webkit.org/show_bug.cgi?id=310605 rdar://173206598

Reviewed by Aditya Keerthi and Tim Horton.

Moved the change implemented here: https://bugs.webkit.org/show_bug.cgi?id=292350
to a quirk specifically for uhc.com.

Uhc.com was the original domain that the radar was filed for: rdar://97210206

* Source/WebCore/page/Quirks.cpp:
* Source/WebKit/UIProcess/Cocoa/WebPasteboardProxyCocoa.mm:
(WebKit::shouldTranscodeHeicImagesForPage):
(WebKit::WebPasteboardProxy::getPasteboardPathnamesForType):
(WebKit::WebPasteboardProxy::allPasteboardItemInfo):
(WebKit::WebPasteboardProxy::informationForItemAtIndex):

Canonical link: https://commits.webkit.org/309872@main